Update GitHub Actions workflow for Next.js deployment

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,89 +1,97 @@
-# Optimized workflow for building and deploying a Next.js static site to GitHub Pages using Bun
-
-name: Deploy Next.js site to GitHub Pages
+# Sample workflow for building and deploying a Next.js site to GitHub Pages using Bun
+#
+# To get started with Next.js see: https://nextjs.org/docs/getting-started
+#
+name: Deploy Next.js site to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Prevent multiple deploys from overlapping
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: deploy-${{ github.ref }}
-  cancel-in-progress: true
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-
+        
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1.1.1
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-
-      - name: Configure GitHub Pages
+          
+      - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-
-      # Cache Bun dependencies
+          
       - name: Cache Bun dependencies
         uses: actions/cache@v4
+        id: bun-cache
         with:
-          path: ~/.bun/install/cache
+          path: |
+            ~/.bun/install/cache
+            node_modules
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: |
             ${{ runner.os }}-bun-
-
-      # Cache Next.js build cache
-      - name: Cache Next.js build cache
+            
+      - name: Cache Next.js build
         uses: actions/cache@v4
+        id: nextjs-cache
         with:
-          path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/bun.lockb') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          path: |
+            .next/cache
+            .next/static
+            .next/server
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/bun.lockb') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx', '!node_modules/**') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/bun.lockb') }}-
-
+            ${{ runner.os }}-nextjs-
+            
+      - name: Cache status
+        run: |
+          echo "Bun cache hit: ${{ steps.bun-cache.outputs.cache-hit }}"
+          echo "Next.js cache hit: ${{ steps.nextjs-cache.outputs.cache-hit }}"
+          
       - name: Install dependencies
         run: bun install --frozen-lockfile
-
-      # Optional: Lint and type-check before build
-      - name: Lint
-        run: bun run lint || echo "Lint warnings ignored"
-
-      - name: Type check
-        run: bun run type-check || echo "Type errors ignored"
-
-      - name: Build Next.js site
+        
+      - name: Build with Next.js
         run: bun run build
-
-      # Explicit static export (for GitHub Pages)
-      - name: Export static site
-        run: bun run next export
-
-      - name: Upload static site artifact
+        env:
+          NODE_ENV: production
+          NEXT_TELEMETRY_DISABLED: 1
+          
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
-          name: nextjs-static-site
-          retention-days: 7
 
+  # Deployment job
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
