--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
@@ -52,6 +53,7 @@
     "react": "^19.2.3",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.71.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "2.15.4",
